--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nubity-web",
+  "name": "nubity-spa",
   "version": "0.0.1",
-  "description": "nubity-web",
+  "description": "nubity-spa",
   "main": "js/app.js",
   "scripts": {
     "start": "watchify js/app.js -o js/bundle.js -v -d",
@@ -19,7 +19,6 @@
   "homepage": "https://my.nubity.com",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "eslint": "^3.9.1",
     "flux": "^2.0.1",
     "font-awesome": "^4.7.0",
     "j-toker": "0.0.10-beta3",
@@ -39,6 +38,8 @@
   "devDependencies": {
     "browserify": "^8.1.3",
     "envify": "^3.2.0",
+    "eslint": "^3.9.1",
+    "eslint-plugin-react": "^6.8.0",
     "reactify": "^1.0.0",
     "uglify-js": "^2.4.16",
     "watchify": "^2.3.0"
