--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "flux": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "highcharts": "^5.0.7",
     "j-toker": "0.0.10-beta3",
     "jquery": "^3.1.1",
     "keymirror": "^0.1.1",
