--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,8 @@
   "description": "nubity-spa",
   "main": "js/app.js",
   "scripts": {
-    "start": "watchify js/app.js -o js/bundle.js -v -d",
+    "live": "grunt config_live && watchify js/app.js -o js/bundle.js -v -d",
+    "dev": "grunt config_dev && watchify js/app.js -o js/bundle.js -v -d",
     "build": "browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js"
   },
   "repository": {
@@ -63,6 +64,8 @@
     "envify": "^4.0.0",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.8.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "reactify": "^1.0.0",
     "uglify-js": "^2.4.16",
     "watchify": "^3.9.0"
