--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,8 @@
     "dev": "grunt config_dev && watchify js/app.js -o js/bundle.js -v -d",
     "build": "browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js",
     "build:prod": "grunt config_prod && npm run build",
-    "build:dev": "grunt config_dev && npm run build"
+    "build:dev": "grunt config_dev && npm run build",
+    "deploy": "shipit production deploy"
   },
   "repository": {
     "type": "git",
@@ -69,6 +70,8 @@
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "reactify": "^1.0.0",
+    "shipit-cli": "^2.0.0",
+    "shipit-deploy": "^2.4.0",
     "uglify-js": "^2.4.16",
     "watchify": "^3.9.0"
   },
