--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.10.6",
     "nubity-webfont": "^0.1.3",
     "object-assign": "^2.0.0",
+    "rc-switch": "^1.4.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.4",
     "react-router": "^0.13.0",
