--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 env:
   browser: true
   jquery: true
+  es6: true
 extends: 'eslint:recommended'
 installedESLint: true
 parserOptions:
@@ -10,6 +11,13 @@ parserOptions:
 plugins:
   - react
 rules:
+  react/jsx-uses-vars: 1
+  react/jsx-uses-react: 1
+  no-unused-vars: 
+    - error
+    -
+      vars: local
+      args: none
   indent:
     - error
     - 2
