--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "j-toker": "0.0.10-beta3",
     "jquery": "^3.1.1",
     "keymirror": "^0.1.1",
+    "lodash": "^4.17.4",
     "moment": "^2.10.6",
     "nubity-webfont": "^0.1.3",
     "object-assign": "^2.0.0",
