--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,6 +13,12 @@ plugins:
 rules:
   react/jsx-uses-vars: 1
   react/jsx-uses-react: 1
+  no-console:
+    - error
+    -
+      allow:
+        - warn
+        - error
   no-unused-vars:
     - error
     -
