--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "rc-switch": "^1.4.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.4",
+    "react-clipboard.js": "^1.0.1",
     "react-router": "^0.13.0",
     "string.prototype.repeat": "^0.2.0",
     "superagent": "^0.21.0",
