--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "jquery": "^3.1.1",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.4",
-    "moment": "^2.10.6",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.11",
     "nubity-webfont": "^0.1.3",
     "object-assign": "^2.0.0",
     "rc-switch": "^1.4.3",
