--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,8 @@ env:
   browser: true
   jquery: true
   es6: true
-extends: 'eslint:recommended'
+extends:
+  - 'eslint:recommended'
 installedESLint: true
 parserOptions:
   ecmaFeatures:
@@ -13,6 +14,21 @@ plugins:
 rules:
   react/jsx-uses-vars: 1
   react/jsx-uses-react: 1
+  react/jsx-indent:
+    - error
+    - 2
+  react/jsx-indent-props:
+    - error
+    - 2
+  react/jsx-curly-spacing:
+    - error
+    - never
+  react/jsx-equals-spacing:
+    - error
+    - never
+  react/jsx-space-before-closing:
+    - error
+    - always
   no-console:
     - error
     -
@@ -31,6 +47,22 @@ rules:
   linebreak-style:
     - error
     - unix
+  no-trailing-spaces:
+    - error
+  key-spacing:
+    - error
+    - align: value
+  no-multi-spaces:
+    - error
+    - exceptions:
+        Property: true
+        VariableDeclarator: true
+  curly:
+    - error
+  brace-style:
+    - error
+    - 1tbs
+    - allowSingleLine: true
   quotes:
     - error
     - single
@@ -51,6 +83,10 @@ rules:
     -
       anonymous: always
       named: never
+  no-extra-parens:
+    - error
+    - all
+    - ignoreJSX: all
   yoda:
     - 2
     - always
