removing console logs

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://my.nubity.com",
   "dependencies": {
+    "alertify.js": "^1.0.12",
     "bootstrap": "^3.3.7",
     "flux": "^2.0.1",
     "font-awesome": "^4.7.0",
