--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,6 +17,9 @@ settings:
 rules:
   react/jsx-uses-vars: 1
   react/jsx-uses-react: 1
+  react/prefer-es6-class:
+    - 1
+    - always
   react/jsx-indent:
     - error
     - 2
