--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "alertify.js": "^1.0.12",
     "bootstrap": "^3.3.7",
-    "flux": "^2.0.1",
+    "create-react-class": "^15.5.2",
+    "flux": "^3.1.2",
     "font-awesome": "^4.7.0",
     "highcharts": "^5.0.7",
     "j-toker": "0.0.10-beta3",
@@ -30,32 +31,54 @@
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "nubity-webfont": "^0.1.3",
-    "object-assign": "^2.0.0",
-    "rc-switch": "^1.4.3",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.26.4",
-    "react-clipboard.js": "1.0.1",
-    "react-dropzone": "^2.2.4",
-    "react-router": "^0.13.0",
+    "object-assign": "^4.1.1",
+    "prop-types": "^15.5.8",
+    "rc-switch": "^1.4.4",
+    "react": "^15.5.4",
+    "react-addons-create-fragment": "^15.*.*",
+    "react-addons-css-transition-group": "^15.*.*",
+    "react-addons-linked-state-mixin": "^15.*.*",
+    "react-addons-perf": "^15.*.*",
+    "react-addons-pure-render-mixin": "^15.*.*",
+    "react-addons-shallow-compare": "^15.*.*",
+    "react-addons-test-utils": "^15.*.*",
+    "react-addons-transition-group": "^15.*.*",
+    "react-addons-update": "^15.*.*",
+    "react-bootstrap": "^0.31.0",
+    "react-clipboard.js": "^1.1.1",
+    "react-dom": "^15.5.4",
+    "react-dropzone": "^3.13.0",
+    "react-router": "^3",
     "string.prototype.repeat": "^0.2.0",
-    "superagent": "^0.21.0",
+    "superagent": "^3.5.0",
     "superagent-prefix": "0.0.2",
     "superagent-use": "^0.1.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "browserify": "^8.1.3",
-    "envify": "^3.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
+    "envify": "^4.0.0",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.8.0",
     "reactify": "^1.0.0",
     "uglify-js": "^2.4.16",
-    "watchify": "^2.3.0"
+    "watchify": "^3.9.0"
   },
   "browserify": {
     "transform": [
-      "reactify",
-      "envify"
+      "envify",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
     ]
   }
 }
