--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "main": "js/app.js",
   "scripts": {
     "start": "watchify js/app.js -o js/bundle.js -v -d",
-    "build": "browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js"
+    "build": "browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js",
+    "http": "http-server"
   },
   "repository": {
     "type": "git",
@@ -65,7 +66,8 @@
     "eslint-plugin-react": "^6.8.0",
     "reactify": "^1.0.0",
     "uglify-js": "^2.4.16",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "http-server": "^0.8"
   },
   "browserify": {
     "transform": [
