--- a/web/package.json
+++ b/web/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.0",
     "react-router": "^3",
+    "react-select": "^1.0.0-rc.3",
     "string.prototype.repeat": "^0.2.0",
     "superagent": "^3.5.0",
     "superagent-prefix": "0.0.2",
