--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,9 @@
 dependencies:
+  pre:
+    - npm install -g npm@^4.0
   override:
-    - npm install --prefix=web
     - npm run build --prefix=web
+    - npm install --prefix=web
     - ./web/node_modules/eslint/bin/eslint.js --fix web/.
   cache_directories:
     - web/node_modules
