--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,8 @@
   "description": "nubity-spa",
   "main": "js/app.js",
   "scripts": {
-    "start": "watchify js/app.js -o js/bundle.js -v -d",
-    "build": "browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js",
+    "start": "npm install && watchify js/app.js -o js/bundle.js -v -d",
+    "build": "npm install --only=production && browserify . -o js/bundle.tmp.js && uglifyjs js/bundle.tmp.js -cm > js/bundle.js && rm js/bundle.tmp.js",
     "http": "http-server"
   },
   "repository": {
@@ -19,6 +19,12 @@
   },
   "homepage": "https://my.nubity.com",
   "dependencies": {
+    "browserify": "^14.1.0",
+    "envify": "^4.0.0",
+    "babelify": "^7.3.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "uglify-js": "^2.4.16",
     "alertify.js": "^1.0.12",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.5.2",
@@ -57,15 +63,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "envify": "^4.0.0",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.8.0",
     "reactify": "^1.0.0",
-    "uglify-js": "^2.4.16",
     "watchify": "^3.9.0",
     "http-server": "^0.8"
   },
