--- a/web/package.json
+++ b/web/package.json
@@ -19,15 +19,15 @@
   },
   "homepage": "https://my.nubity.com",
   "dependencies": {
-    "browserify": "^14.1.0",
-    "envify": "^4.0.0",
-    "babelify": "^7.3.0",
+    "alertify.js": "^1.0.12",
+    "alertifyjs": "^1.10.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "uglify-js": "^2.4.16",
-    "alertify.js": "^1.0.12",
+    "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
+    "browserify": "^14.1.0",
     "create-react-class": "^15.5.2",
+    "envify": "^4.0.0",
     "flux": "^3.1.2",
     "font-awesome": "^4.7.0",
     "highcharts": "^5.0.7",
@@ -60,6 +60,7 @@
     "superagent": "^3.5.0",
     "superagent-prefix": "0.0.2",
     "superagent-use": "^0.1.0",
+    "uglify-js": "^2.4.16",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
