--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,7 +5,9 @@ env:
 extends:
   - 'eslint:recommended'
 installedESLint: true
+parser: babel-eslint
 parserOptions:
+  sourceType: module
   ecmaFeatures:
     experimentalObjectRestSpread: true
     jsx: true
