--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "alertify.js": "^1.0.12",
     "alertifyjs": "^1.10.0",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -64,11 +65,12 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.8.0",
+    "http-server": "^0.8",
     "reactify": "^1.0.0",
-    "watchify": "^3.9.0",
-    "http-server": "^0.8"
+    "watchify": "^3.9.0"
   },
   "browserify": {
     "transform": [
@@ -79,6 +81,9 @@
           "presets": [
             "es2015",
             "react"
+          ],
+          "plugins": [
+            "transform-class-properties"
           ]
         }
       ]
